add tox clf page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -62,6 +62,27 @@ author_profile: true
 <!--   <br>Large Language Models</br>  -->
 <!-- </h1>                             -->
 
+<!-- Streamlit Toxic Language Classifier App -->
+<div class="project">
+  <h2 class="project-title">
+      <a href="../DL_projects/" target="_self">Toxic Language Classifier</a>
+  </h2>
+  <p class="project-description">A lightweight model for Detecting Toxic Language.</p>
+  <div class="project-body">
+      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="130">
+      <p>
+        In this project, I set out to build an efficient, lightweight model that can accurately classify 
+        toxic content using minimal computational resources. The model performs <b>multilabel classification</b>, 
+        meaning it can detect and assign multiple types of toxicity — like insults, threats, or hate speech — to
+        a single piece of text. Given the compact nature of the dataset (around 100,000 short text samples), 
+        I chose a <b>hybrid CNN+GRU architecture</b>. This approach combines the strengths of <b>convolutional layers</b> 
+        for pattern detection with <b>recurrent layers</b> for capturing contextual flow, striking a solid balance 
+        between performance and efficiency. The final model is integrated into a <b>Streamlit web app</b>, making 
+        it easy to test and explore in real time.
+      </p>
+  </div>
+</div>
+
 <!-- Dailogy App -->
 <div class="project">
   <h2 class="project-title">
