edit links and img size

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -65,11 +65,11 @@ author_profile: true
 <!-- Streamlit Toxic Language Classifier App -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../DL_projects/" target="_self">Toxic Language Classifier</a>
+      <a href="../DL_projects/toxic_clf/" target="_self">Toxic Language Classifier</a>
   </h2>
   <p class="project-description">A lightweight model for Detecting Toxic Language.</p>
   <div class="project-body">
-      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="130">
+      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="200">
       <p>
         In this project, I set out to build an efficient, lightweight model that can accurately classify 
         toxic content using minimal computational resources. The model performs <b>multilabel classification</b>, 
