--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -46,6 +46,13 @@ author_profile: true
   .project-body p {
       margin: 0;
   }
+  .project-image {
+    float: left;        /* Makes text wrap around the image */
+    margin-right: 15px; /* Adds space between image and text */
+    width: 200px;
+    height: auto;
+    border-radius: 8px; /* Optional: slight rounding for aesthetics */
+}
   hr {
     height:3px;
     border:none;
@@ -69,8 +76,8 @@ author_profile: true
   </h2>
   <p class="project-description">A lightweight model for Detecting Toxic Language.</p>
   <div class="project-body">
-      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="200">
-      <!-- <p> -->
+      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" class="project-image">
+      <p>
         In this project, I set out to build an efficient, lightweight model that can accurately classify 
         toxic content using minimal computational resources. The model performs <b>multilabel classification</b>, 
         meaning it can detect and assign multiple types of toxicity — like insults, threats, or hate speech — to
@@ -79,7 +86,7 @@ author_profile: true
         for pattern detection with <b>recurrent layers</b> for capturing contextual flow, striking a solid balance 
         between performance and efficiency. The final model is integrated into a <b>Streamlit web app</b>, making 
         it easy to test and explore in real time.
-      <!-- </p> -->
+      </p>
   </div>
 </div>
 
