--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -46,13 +46,6 @@ author_profile: true
   .project-body p {
       margin: 0;
   }
-  .project-image {
-    float: left;        /* Makes text wrap around the image */
-    margin-right: 15px; /* Adds space between image and text */
-    width: 200px;
-    height: auto;
-    border-radius: 8px; /* Optional: slight rounding for aesthetics */
-}
   hr {
     height:3px;
     border:none;
@@ -76,7 +69,7 @@ author_profile: true
   </h2>
   <p class="project-description">A lightweight model for Detecting Toxic Language.</p>
   <div class="project-body">
-      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" class="project-image">
+      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="200">
       <p>
         In this project, I set out to build an efficient, lightweight model that can accurately classify 
         toxic content using minimal computational resources. The model performs <b>multilabel classification</b>, 
