--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -40,7 +40,7 @@ author_profile: true
       align-items: flex-start;
   }
   .project-body img {
-      max-width: 150px;
+      /* max-width: 150px; */  /* 150px */
       margin-right: 15px;
   }
   .project-body p {
