add streamlit logo and link

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -78,7 +78,8 @@ author_profile: true
         I chose a <b>hybrid CNN+GRU architecture</b>. This approach combines the strengths of <b>convolutional layers</b> 
         for pattern detection with <b>recurrent layers</b> for capturing contextual flow, striking a solid balance 
         between performance and efficiency. The final model is integrated into a <b>Streamlit web app</b>, making 
-        it easy to test and explore in real time.
+        it easy to test and explore in real time. The Streamlit app is available here:
+        <a href="https://h79wmnxbmimkvqem9wnwp2.streamlit.app/"><img src="https://static.streamlit.io/badges/streamlit_badge_black_white.svg"></a>
       </p>
   </div>
 </div>
