resize all imgs

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -40,7 +40,7 @@ author_profile: true
       align-items: flex-start;
   }
   .project-body img {
-      /* max-width: 150px; */  /* 150px */
+      /* max-width: 150px; */
       margin-right: 15px;
   }
   .project-body p {
@@ -69,7 +69,7 @@ author_profile: true
   </h2>
   <p class="project-description">A lightweight model for Detecting Toxic Language.</p>
   <div class="project-body">
-      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="200">
+      <img src="/images/streamlit_tox_clf_screenshot.png" alt="Streamlit Tox-clf Screenshot" width="150">
       <p>
         In this project, I set out to build an efficient, lightweight model that can accurately classify 
         toxic content using minimal computational resources. The model performs <b>multilabel classification</b>, 
@@ -78,7 +78,7 @@ author_profile: true
         I chose a <b>hybrid CNN+GRU architecture</b>. This approach combines the strengths of <b>convolutional layers</b> 
         for pattern detection with <b>recurrent layers</b> for capturing contextual flow, striking a solid balance 
         between performance and efficiency. The final model is integrated into a <b>Streamlit web app</b>, making 
-        it easy to test and explore in real time. The Streamlit app is available here:<br>
+        it easy to test and explore in real time. <br>
         <a href="https://h79wmnxbmimkvqem9wnwp2.streamlit.app/"><img src="https://static.streamlit.io/badges/streamlit_badge_black_white.svg"></a>
       </p>
   </div>
@@ -91,7 +91,7 @@ author_profile: true
   </h2>
   <p class="project-description">A System for Detecting and Improving Dysfunctional Language.</p>
   <div class="project-body">
-      <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="130">
+      <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="150">
       <p>
         This project is dedicated to developing an app designed to transform dysfunctional and toxic 
         language into more respectful and inclusive communication. Our current focus is on interactions 
@@ -113,7 +113,8 @@ author_profile: true
         This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
         data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
         pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
-        and page number of the referenced documents.
+        and page number of the referenced documents. <br>
+        <a href="https://chatbotafa-dgzurhjau4dm3ofd9ezzmk.streamlit.app/"><img src="https://static.streamlit.io/badges/streamlit_badge_black_white.svg"></a>
       </p>
   </div>
 </div>
