add github link for toxic clf

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -80,6 +80,7 @@ author_profile: true
         between performance and efficiency. The final model is integrated into a <b>Streamlit web app</b>, making 
         it easy to test and explore in real time. <br>
         <a href="https://h79wmnxbmimkvqem9wnwp2.streamlit.app/"><img src="https://static.streamlit.io/badges/streamlit_badge_black_white.svg"></a>
+        <a href="https://github.com/DanieleDidino/toxic_comment_clf"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"></a>
       </p>
   </div>
 </div>
